// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Shared submit utils Create Route should match the previous snapshot deploy image data 1`] = `
{
  "apiVersion": "route.openshift.io/v1",
  "kind": "Route",
  "metadata": {
    "annotations": {
      "openshift.io/generated-by": "OpenShiftWebConsole",
    },
    "labels": {
      "app": "test-app",
      "app.kubernetes.io/component": "test-app",
      "app.kubernetes.io/instance": "test-app",
      "app.kubernetes.io/name": "test-app",
      "app.kubernetes.io/part-of": "mock-app",
      "app.openshift.io/runtime-version": "latest",
    },
    "name": "test-app",
    "namespace": "mock-project",
  },
  "spec": {
    "host": "",
    "path": "",
    "port": {
      "targetPort": "8080-tcp",
    },
    "tls": null,
    "to": {
      "kind": "Service",
      "name": "test-app",
    },
    "wildcardPolicy": "None",
  },
}
`;

exports[`Shared submit utils Create Route should match the previous snapshot with git import data 1`] = `
{
  "apiVersion": "route.openshift.io/v1",
  "kind": "Route",
  "metadata": {
    "annotations": {
      "app.openshift.io/vcs-ref": "",
      "app.openshift.io/vcs-uri": "https://github.com/test/repo",
      "openshift.io/generated-by": "OpenShiftWebConsole",
    },
    "labels": {
      "app": "test-app",
      "app.kubernetes.io/component": "test-app",
      "app.kubernetes.io/instance": "test-app",
      "app.kubernetes.io/name": "test-app",
      "app.kubernetes.io/part-of": "mock-app",
      "app.openshift.io/runtime-version": "latest",
    },
    "name": "test-app",
    "namespace": "mock-project",
  },
  "spec": {
    "host": "",
    "path": "",
    "port": {
      "targetPort": "8080-tcp",
    },
    "tls": null,
    "to": {
      "kind": "Service",
      "name": "test-app",
    },
    "wildcardPolicy": "None",
  },
}
`;

exports[`Shared submit utils Create Service should match the previous snapshot created with deploy image data 1`] = `
{
  "apiVersion": "v1",
  "kind": "Service",
  "metadata": {
    "annotations": {
      "openshift.io/generated-by": "OpenShiftWebConsole",
    },
    "labels": {
      "app": "test-app",
      "app.kubernetes.io/component": "test-app",
      "app.kubernetes.io/instance": "test-app",
      "app.kubernetes.io/name": "test-app",
      "app.kubernetes.io/part-of": "mock-app",
      "app.openshift.io/runtime-version": "latest",
    },
    "name": "test-app",
    "namespace": "mock-project",
  },
  "spec": {
    "ports": [],
    "selector": {
      "app": "test-app",
      "deploymentconfig": "test-app",
    },
  },
}
`;

exports[`Shared submit utils Create Service should match the previous snapshot created with git import data 1`] = `
{
  "apiVersion": "v1",
  "kind": "Service",
  "metadata": {
    "annotations": {
      "app.openshift.io/vcs-ref": "",
      "app.openshift.io/vcs-uri": "https://github.com/test/repo",
      "openshift.io/generated-by": "OpenShiftWebConsole",
    },
    "labels": {
      "app": "test-app",
      "app.kubernetes.io/component": "test-app",
      "app.kubernetes.io/instance": "test-app",
      "app.kubernetes.io/name": "test-app",
      "app.kubernetes.io/part-of": "mock-app",
      "app.openshift.io/runtime-version": "latest",
    },
    "name": "test-app",
    "namespace": "mock-project",
  },
  "spec": {
    "ports": [
      {
        "name": "8080-tcp",
        "port": 8080,
        "protocol": "TCP",
        "targetPort": 8080,
      },
    ],
    "selector": {
      "app": "test-app",
      "deploymentconfig": "test-app",
    },
  },
}
`;
